--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=contador-primos
-spring.datasource.url=jdbc:postgresql://localhost:5432/contadorprimos
+spring.datasource.url=jdbc:postgresql://postgres/contadorprimos
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
